fix(VCheckbox): spacing issue with dense (#10407)
fixes #10336

VCheckBox and VRadioGroup had a spacing issue when using the dense prop during the hover effect.

--- a/packages/vuetify/src/styles/components/_selection-controls.sass
+++ b/packages/vuetify/src/styles/components/_selection-controls.sass
@@ -95,7 +95,7 @@
     .v-input--selection-controls__ripple
       width: 28px
       height: 28px
-      left: -11px
+      left: -9px
 
     &:not(.v-input--switch)
       .v-input--selection-controls__ripple
